@@ -1,62 +1,119 @@
-/*
- * This build file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.4.1/userguide/java_library_plugin.html
- */
-
-String propValue(String propName, String defValue) {
-    (project.hasProperty(propName) && project.getProperty(propName)) ? project.getProperty(propName) : defValue
+configurations {
+    markdownDoclet
 }
 
-version = propValue("ci_version","master");
+dependencies {
+    markdownDoclet "org.jdrupes.mdoclet:doclet:4.1.0"
+}
+
 group = "com.softwareplumbers.oss"
+
+/* Fallback for version name - get the first tag describing the version in place */
+def GitVersionName = "git describe --tags".execute().text.split('\n')[0].trim();
+
+/* the env var GITHUB_REF_NAME will take precedence over GitVersionName. Remove the 'deploy' prefix */
+version = (System.getenv('GITHUB_REF_NAME') ?: GitVersionName).replace('deploy.','');
 
 def SNAPSHOT_BUILDS = ["master"];
 
 if (SNAPSHOT_BUILDS.contains(version)) { version = version + "-SNAPSHOT" };
 
 // Apply the java-library plugin to add support for Java Library
-apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'java-library'
+apply plugin: 'maven-publish'
 
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-	maven { url propValue("proxyMavenCentral", "https://repo.maven.apache.org/maven2/") }
+repositories { 
+    mavenCentral() 
 }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      repository(url: "https://nexus.softwareplumbers.com/repository/maven-oss") {
-      	authentication(userName: propValue("mavenUploadUser",""), password: propValue("mavenUploadPassword",""))
-      }
-      snapshotRepository(url: "https://nexus.softwareplumbers.com/repository/maven-oss-snapshot") {
-        authentication(userName: propValue("mavenUploadUser",""), password: propValue("mavenUploadPassword",""))
-      }
+test {
+	systemProperties = System.properties
+	testLogging {
+        events "passed", "skipped", "failed"
     }
-  }
+}
+
+task mdoclet(type: Javadoc) {
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21
+
+    source = fileTree(dir: 'src/main/java', include: '**/*.java')
+    destinationDir = project.file("build/generated/doc")
+    options.docletpath = configurations.markdownDoclet.files.asType(List)
+    options.doclet = 'org.jdrupes.mdoclet.MDoclet'
+    options.overview = 'src/overview.md'
+    options.addStringOption('Xdoclint:-html', '-quiet')
+
+    options.setJFlags([
+        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED'
+    ])
+}
+
+java {
+    withSourcesJar()
+}
+
+task javadocJar(type: Jar) {
+    from mdoclet
+    archiveBaseName = 'qualified-name'
+    archiveClassifier = 'javadoc'
 }
 
 dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+    testImplementation group: 'org.glassfish', name: 'javax.json', version: '1.1.2'
 }
 
 jar {
-  baseName 'qualified-name'
+    archiveBaseName = 'qualified-name'
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier 'sources'
-	from sourceSets.main.allSource
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = "qualified-name"
+            artifact sourcesJar
+            artifact jar
+            artifact javadocJar
+            pom {
+                name = 'Qualified Name'
+                description = 'Library for composing text matching patterns over different back-ends'
+                url = 'https://github.com/SoftwarePlumbersOss/qualified-name-java'
+                licenses {
+                    license {
+                        name = 'LGPL'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'softwareplumber'
+                        name = 'Jonathan Essex'
+                        email = 'jonathan.essex@softwareplumbers.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:https://github.com/SoftwarePlumbersOss/qualified-name-java.git'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/SoftwarePlumbersOss/qualified-name-java"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
 }
-
-artifacts {
-	archives sourcesJar
-}
-
